--- a/NoteAppDAT/pom.xml
+++ b/NoteAppDAT/pom.xml
@@ -84,8 +84,8 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>${jakartaee}</version>
-            <scope>provided</scope>
+            <version>8.0</version>
+            <type>jar</type>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.primefaces/primefaces -->
         <dependency>
