--- a/NoteAppDAT/pom.xml
+++ b/NoteAppDAT/pom.xml
@@ -93,7 +93,12 @@
             <artifactId>primefaces</artifactId>
             <version>8.0</version>
         </dependency>
-
+        <!-- theme -->
+        <dependency>
+            <groupId>org.primefaces.extensions</groupId>
+            <artifactId>all-themes</artifactId>
+            <version>1.0.8</version>
+        </dependency>
     </dependencies>
     
      <build>
