--- a/NoteAppDAT/src/main/webapp/WEB-INF/web.xml
+++ b/NoteAppDAT/src/main/webapp/WEB-INF/web.xml
@@ -20,4 +20,17 @@
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
+    
+    <context-param>
+            <param-name>primefaces.FONT_AWESOME</param-name>
+            <param-value>true</param-value>
+    </context-param>
+    <context-param>
+            <param-name>org.omnifaces.FACES_VIEWS_SCAN_PATHS</param-name>
+            <param-value>/*.xhtml</param-value>
+    </context-param>
+    <context-param>
+        <param-name>primefaces.THEME</param-name>
+        <param-value>black-tie</param-value>
+    </context-param>
 </web-app>
