Welcome page together with script and modifiications to calender page buttons

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ NoteAppDAT/nb-configuration.xml
 /NoteAppDAT/NoteAppDAT.iml
 /.idea/
 NoteAppDAT/nbactions-no-test.xml
+NoteAppDAT/nbactions-sebbe.xml
