--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@
 NoteAppDAT/nb-configuration.xml
 /NoteAppDAT/nbproject/
 /NoteAppDAT/NoteAppDAT.iml
-/.idea/
 NoteAppDAT/nbactions-no-test.xml
 NoteAppDAT/nbactions-sebbe.xml
+.idea/
